flux/clusters/infrastructure/base/sonarqube/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: tailscale
  namespace: sonarqube
spec:
  gatewayClassName: tailscale
  listeners:
  - hostname: sonarqube
    name: sonarqube-http
    port: 80
    protocol: HTTP
  - hostname: sonarqube
    name: sonarqube-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: sonarqube
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: sonarqube-sonarqube
  namespace: sonarqube
spec:
  hostnames:
  - sonarqube
  parentRefs:
  - name: tailscale
    port: 443
  rules:
  - backendRefs:
    - name: sonarqube-sonarqube
      port: 9000
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: sonarqube-sonarqube-http
  namespace: sonarqube
spec:
  hostnames:
  - sonarqube
  parentRefs:
  - name: tailscale
    port: 80
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 308
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
